--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(139, 192, 216, 0.73);
+  font-family: Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: 24px;
+  font-weight: 200;
+  line-height: 28px;
+  color: black;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li.first-letter {
+  text-transform: capitalize;
+}
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: black;
+  font-weight: 100;
+  font-size: 17px;
+  line-height: 19px;
+  text-transform: capitalize;
 }
