--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,28 @@
-.Weather {
-  padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
-  background-image: url("https://images.pexels.com/photos/2310713/pexels-photo-2310713.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-  background-repeat: no-repeat;
-  background-size: cover;
+body {
+  background-color: rgba(139, 192, 216, 0.73);
+  font-family: Arial, sans-serif;
 }
 
-.Weather .overview {
-  margin-bottom: 20px;
+h1 {
+  font-size: 24px;
+  font-weight: 200;
+  line-height: 28px;
+  color: black;
 }
-
-.Weather .weather-temperature img {
-  margin-right: 5px;
-  height: 64px;
-  width: 64px;
+ul {
+  margin: 0;
+  padding: 0;
 }
-
-.Weather .weather-temperature strong {
-  color: rgb(33, 33, 33);
-  font-size: 64px;
-  line-height: 1;
-  font-weight: 400;
+li.first-letter {
+  text-transform: capitalize;
 }
-
-.Weather .weather-temperature .units {
-  position: relative;
-  font-size: 16px;
-  top: -34px;
-}
-
-.Weather .weather-temperature .active {
-  color: rgb(33, 33, 33);
-  cursor: default;
-}
-
-.Weather .weather-temperature .active:hover {
-  text-decoration: none;
-}
-
-.Weather .weather-forecast {
-  margin-top: 10px;
-}
-
-.Weather .weather-forecast h3 {
-  color: rgb(186, 186, 186);
-  font-size: 14px;
-  font-weight: 400;
-  text-align: center;
-  height: 15px;
-  line-height: 15px;
-  padding-top: 7px;
-}
-
-.Weather .weather-forecast img {
-  display: block;
-  margin: 0 auto;
-  height: 48px;
-  width: 48px;
-}
-
-.Weather .weather-forecast-temperature {
-  text-align: center;
-  color: rgb(135, 135, 135);
-  font-size: 13px;
-  font-weight: 400;
-  height: auto;
-  line-height: 15px;
-  white-space: nowrap;
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: black;
+  font-weight: 100;
+  font-size: 17px;
+  line-height: 19px;
+  text-transform: capitalize;
 }
