--- a/src/Weather.css
+++ b/src/Weather.css
@@ -5,9 +5,11 @@
   background-image: url("https://images.pexels.com/photos/2310713/pexels-photo-2310713.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-repeat: no-repeat;
   background-size: cover;
+  margin-top: 20px;
 }
 
 .Weather .overview {
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
